# timus

./: .clang-format  Build.bat  BuildVS2017.bat  BuildVS2022.bat  CMakeLists.txt  README.md
Problems/Design/: CMakeLists.txt
Problems/Design/0001_non-leaf-abstract-classes/: CMakeLists.txt  main.cpp
Problems/Design/0002_alternatives-to-abstract-functions/: CMakeLists.txt  main.cpp
Problems/Different/: CMakeLists.txt
Problems/Different/0001_Algo_PriorityQueue/: CMakeLists.txt
Problems/Different/0002_LongestCommonPrefix/: CMakeLists.txt  input.txt  main.cpp
Problems/Different/0002_StructBSearch/: CMakeLists.txt  main.cpp
Problems/Different/0003_FilterVector/: CMakeLists.txt  main.cpp
Problems/Different/0003_Stocks/: CMakeLists.txt  input.txt  main.cpp
Problems/Different/0004_FilterVector/: CMakeLists.txt  input.txt
Problems/HackerRank/: CMakeLists.txt
Problems/HackerRank/2s-complement/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/30-2d-arrays/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/30-binary-numbers/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/abstract-classes-polymorphism/: CMakeLists.txt  main.cpp
Problems/HackerRank/arrange-students/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/attending-workshops/: CMakeLists.txt  main.cpp
Problems/HackerRank/attribute-parser/: CMakeLists.txt  main.cpp  output.txt
Problems/HackerRank/basketball-tournament-1/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/beautiful-days-at-the-movies/: CMakeLists.txt  main.cpp
Problems/HackerRank/big-sorting/: CMakeLists.txt  main.cpp
Problems/HackerRank/bon-appetit/: CMakeLists.txt  main.cpp
Problems/HackerRank/circular-array-rotation/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/climbing-the-leaderboard/: CMakeLists.txt  main.cpp
Problems/HackerRank/correctness-invariant/: CMakeLists.txt  main.cpp
Problems/HackerRank/cpp-variadics/: CMakeLists.txt  main.cpp
Problems/HackerRank/day-of-the-programmer/: CMakeLists.txt  main.cpp
Problems/HackerRank/dynamic-array/: CMakeLists.txt  main.cpp
Problems/HackerRank/electronics-shop/: CMakeLists.txt  main.cpp
Problems/HackerRank/equal/: CMakeLists.txt  main.cpp
Problems/HackerRank/extra-long-factorials/: CMakeLists.txt
Problems/HackerRank/fibonacci-modified/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/game-of-two-stacks/: CMakeLists.txt  main.cpp
Problems/HackerRank/good-binary-string/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/hanging-posters/: CMakeLists.txt  main.cpp
Problems/HackerRank/insertionsort1/: CMakeLists.txt  main.cpp
Problems/HackerRank/insertionsort2/: CMakeLists.txt  main.cpp
Problems/HackerRank/magic-square-forming/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/maximum-or-1/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/maxsubarray/: CMakeLists.txt  main.cpp
Problems/HackerRank/mean-filter/: CMakeLists.txt  image.pgm  image_out.pgm  input.txt  main.cpp
Problems/HackerRank/new-year-chaos/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/operator-overloading/: CMakeLists.txt  main.cpp
Problems/HackerRank/optimal-path-1/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/permutation-equation/: CMakeLists.txt  main.cpp
Problems/HackerRank/play-game/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/preprocessor-solution/: CMakeLists.txt  main.cpp
Problems/HackerRank/quicksort1/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/save-the-queen/: CMakeLists.txt  main.cpp
Problems/HackerRank/sparse-arrays/: CMakeLists.txt  main.cpp
Problems/HackerRank/string-reduction/: CMakeLists.txt  input.txt  main.cpp
Problems/HackerRank/the-birthday-bar/: CMakeLists.txt  main.cpp
Problems/HackerRank/unbounded-knapsack/: CMakeLists.txt  input.txt  main.cpp
Problems/Timus/: CMakeLists.txt
Problems/Timus/1000_APlusB/: CMakeLists.txt  main.cpp
Problems/Timus/1001_ReverseRoot/: CMakeLists.txt  main.cpp
Problems/Timus/1002_PhoneNumbers/: CMakeLists.txt  input.txt  main.cpp
Problems/Timus/1004_ProductOfDigits/: CMakeLists.txt
Problems/Timus/1005_StonePile/: CMakeLists.txt  input.txt  main.cpp
Problems/Timus/1009_KBasedNumbers/: CMakeLists.txt  main.cpp
Problems/Timus/1020_Rope/: CMakeLists.txt
Problems/Timus/1021_SacramentOfTheSum/: CMakeLists.txt  input.txt  main.cpp
Problems/Timus/1022_GenealogicalTree/: CMakeLists.txt  input.txt  main.cpp
Problems/Timus/1025_DemocracyInDanger/: CMakeLists.txt
Problems/Timus/1026_Questions_and_Answers/: CMakeLists.txt
Problems/Timus/1027_Dpp_Again/: CMakeLists.txt
Problems/Timus/1037_Memory_Management/: CMakeLists.txt  input.txt
Problems/Timus/1044_LuckyTicketsEasy/: CMakeLists.txt  main.cpp
Problems/Timus/1048_SuperlongSums/: CMakeLists.txt  input.txt  main.cpp
Problems/Timus/1061_Buffer_Manager/: CMakeLists.txt
Problems/Timus/1068_Sum/: CMakeLists.txt  main.cpp
Problems/Timus/1073_SquareCountry/: CMakeLists.txt  main.cpp
Problems/Timus/1079_Maximum/: CMakeLists.txt
Problems/Timus/1082_GabyIvanushka/: CMakeLists.txt
Problems/Timus/1083_Factorials/: CMakeLists.txt  input.txt  main.cpp
Problems/Timus/1084_GoatInTheGarden/: CMakeLists.txt  main.cpp
Problems/Timus/1086_Cryptography/: CMakeLists.txt  output.txt
Problems/Timus/1100_Final_Standings/: CMakeLists.txt
Problems/Timus/1106_Two_Teams/: CMakeLists.txt
Problems/Timus/1110_Power/: 1110_Power.xlsx  CMakeLists.txt  input.txt
Problems/Timus/1119_Metro/: CMakeLists.txt
Problems/Timus/1126_Magnetic_Storms/: CMakeLists.txt  output.txt
Problems/Timus/1131_Copying/: CMakeLists.txt  main.cpp
Problems/Timus/1136_Parliament/: CMakeLists.txt  input.txt  main.cpp
Problems/acmp/: CMakeLists.txt
Problems/codechef/: CMakeLists.txt
Problems/codility/: CMakeLists.txt
Problems/ej/: CMakeLists.txt
Problems/geeksforgeeks/: CMakeLists.txt
Problems/interviewbit/: CMakeLists.txt
Problems/leetcode/: CMakeLists.txt
TurnForMEGA_1787/: CMakeLists.txt
project/: CMakeLists.txt
(+1230 files in other folders)
