cmake_minimum_required(VERSION 2.8)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
add_definitions(-DLOCAL_TEST)

project (AlgoPractice)

find_program(CLANG_FORMAT_EXE NAMES "clang-format" DOC "Path to clang-format executable" )
if(NOT CLANG_FORMAT_EXE)
	message(STATUS "clang-format not found.")
else()
	message(STATUS "clang-format found: ${CLANG_FORMAT_EXE}")
	set(CLANG_FORMAT_STYLE_FILE "file")
	set(DO_CLANG_FORMAT "${CLANG_FORMAT_EXE}" "-i -style=${CLANG_FORMAT_STYLE_FILE}")
endif()

include_directories(${PROJECT_SOURCE_DIR}/../utils)

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/../Problems/Timus "${CMAKE_CURRENT_BINARY_DIR}/Timus")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/../Problems/Different "${CMAKE_CURRENT_BINARY_DIR}/Different")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/../Problems/HackerRank "${CMAKE_CURRENT_BINARY_DIR}/HackerRank")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/../Problems/acmp "${CMAKE_CURRENT_BINARY_DIR}/acmp")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/../Problems/codechef "${CMAKE_CURRENT_BINARY_DIR}/codechef")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/../Problems/algs "${CMAKE_CURRENT_BINARY_DIR}/algs")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/../Problems/codility "${CMAKE_CURRENT_BINARY_DIR}/codility")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/../Problems/geeksforgeeks "${CMAKE_CURRENT_BINARY_DIR}/geeksforgeeks")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/../Problems/ej "${CMAKE_CURRENT_BINARY_DIR}/ej")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/../Problems/leetcode "${CMAKE_CURRENT_BINARY_DIR}/leetcode")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/../Problems/Design "${CMAKE_CURRENT_BINARY_DIR}/Design")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/../Problems/interviewbit "${CMAKE_CURRENT_BINARY_DIR}/interviewbit")
