cmake_minimum_required(VERSION 2.8)

SET(PARENT_PROJECT HackerRank)
project (${PARENT_PROJECT})

add_definitions(-DLOCAL_TESTS)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/2s-complement "${CMAKE_CURRENT_BINARY_DIR}/2s-complement")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/the-birthday-bar "${CMAKE_CURRENT_BINARY_DIR}/the-birthday-bar")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/dynamic-array "${CMAKE_CURRENT_BINARY_DIR}/dynamic-array")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/sparse-arrays "${CMAKE_CURRENT_BINARY_DIR}/sparse-arrays")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/day-of-the-programmer "${CMAKE_CURRENT_BINARY_DIR}/day-of-the-programmer")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/bon-appetit "${CMAKE_CURRENT_BINARY_DIR}/bon-appetit")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/abstract-classes-polymorphism "${CMAKE_CURRENT_BINARY_DIR}/abstract-classes-polymorphism")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/mean-filter "${CMAKE_CURRENT_BINARY_DIR}/mean-filter")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/attribute-parser "${CMAKE_CURRENT_BINARY_DIR}/attribute-parser")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/preprocessor-solution "${CMAKE_CURRENT_BINARY_DIR}/preprocessor-solution")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/operator-overloading "${CMAKE_CURRENT_BINARY_DIR}/operator-overloading")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/electronics-shop "${CMAKE_CURRENT_BINARY_DIR}/electronics-shop")
