cmake_minimum_required(VERSION 2.8)

SET(PARENT_PROJECT Timus)
project (${PARENT_PROJECT})

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1787_TurnForMEGA "${CMAKE_CURRENT_BINARY_DIR}/1787_TurnForMEGA")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1723_Sandros_Book "${CMAKE_CURRENT_BINARY_DIR}/1723_Sandros_Book")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1880_Psych_Ups_Eigenvalues "${CMAKE_CURRENT_BINARY_DIR}/1880_Psych_Ups_Eigenvalues")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1086_Cryptography "${CMAKE_CURRENT_BINARY_DIR}/1086_Cryptography")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1079_Maximum "${CMAKE_CURRENT_BINARY_DIR}/1079_Maximum")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1026_Questions_and_Answers "${CMAKE_CURRENT_BINARY_DIR}/1026_Questions_and_Answers")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1319_Hotel "${CMAKE_CURRENT_BINARY_DIR}/1319_Hotel")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1881_Long_problem_statement "${CMAKE_CURRENT_BINARY_DIR}/1881_Long_problem_statement")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1788_On_the_Benefits_of_Umbrellas "${CMAKE_CURRENT_BINARY_DIR}/1788_On_the_Benefits_of_Umbrellas")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1027_Dpp_Again "${CMAKE_CURRENT_BINARY_DIR}/1027_Dpp_Again")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1220_Stacks "${CMAKE_CURRENT_BINARY_DIR}/1220_Stacks")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1800_Murphys_Law "${CMAKE_CURRENT_BINARY_DIR}/1800_Murphys_Law")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1197_Lonesome_Knight "${CMAKE_CURRENT_BINARY_DIR}/1197_Lonesome_Knight")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1567_SMS_spam "${CMAKE_CURRENT_BINARY_DIR}/1567_SMS_spam")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1581_Teamwork "${CMAKE_CURRENT_BINARY_DIR}/1581_Teamwork")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1792_Hamming_Code "${CMAKE_CURRENT_BINARY_DIR}/1792_Hamming_Code")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1061_Buffer_Manager "${CMAKE_CURRENT_BINARY_DIR}/1061_Buffer_Manager")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1601_AntiCAPS "${CMAKE_CURRENT_BINARY_DIR}/1601_AntiCAPS")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1404_Easy_to_Hack "${CMAKE_CURRENT_BINARY_DIR}/1404_Easy_to_Hack")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1685_Orthography "${CMAKE_CURRENT_BINARY_DIR}/1685_Orthography")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1106_Two_Teams "${CMAKE_CURRENT_BINARY_DIR}/1106_Two_Teams")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1119_Metro "${CMAKE_CURRENT_BINARY_DIR}/1119_Metro")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1139_City_Blocks "${CMAKE_CURRENT_BINARY_DIR}/1139_City_Blocks")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1293_Eniya "${CMAKE_CURRENT_BINARY_DIR}/1293_Eniya")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/2012_AboutGrishaN "${CMAKE_CURRENT_BINARY_DIR}/2012_AboutGrishaN")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1264_Workdays "${CMAKE_CURRENT_BINARY_DIR}/1264_Workdays")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1313_SomeWordsAboutSport "${CMAKE_CURRENT_BINARY_DIR}/1313_SomeWordsAboutSport")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1068_Sum "${CMAKE_CURRENT_BINARY_DIR}/1068_Sum")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/2023_DonaldIsPostman "${CMAKE_CURRENT_BINARY_DIR}/2023_DonaldIsPostman")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1209_1101001000 "${CMAKE_CURRENT_BINARY_DIR}/1209_1101001000")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/2066_SimpleExpression "${CMAKE_CURRENT_BINARY_DIR}/2066_SimpleExpression")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1149_SinusDances "${CMAKE_CURRENT_BINARY_DIR}/1149_SinusDances")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1025_DemocracyInDanger "${CMAKE_CURRENT_BINARY_DIR}/1025_DemocracyInDanger")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1785_LostInLocalization "${CMAKE_CURRENT_BINARY_DIR}/1785_LostInLocalization")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1877_BicycleCodes "${CMAKE_CURRENT_BINARY_DIR}/1877_BicycleCodes")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/2001_MathematiciansAndBerries "${CMAKE_CURRENT_BINARY_DIR}/2001_MathematiciansAndBerries")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1910_TitanRuinsHiddenEntrance "${CMAKE_CURRENT_BINARY_DIR}/1910_TitanRuinsHiddenEntrance")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1639_Chocolate_2 "${CMAKE_CURRENT_BINARY_DIR}/1639_Chocolate_2")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1225_Flags "${CMAKE_CURRENT_BINARY_DIR}/1225_Flags")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1263_Elections "${CMAKE_CURRENT_BINARY_DIR}/1263_Elections")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1585_Penguins "${CMAKE_CURRENT_BINARY_DIR}/1585_Penguins")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1991_TheBattleNearTheSwamp "${CMAKE_CURRENT_BINARY_DIR}/1991_TheBattleNearTheSwamp")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1876_Centipedes_Morning "${CMAKE_CURRENT_BINARY_DIR}/1876_Centipedes_Morning")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1100_Final_Standings "${CMAKE_CURRENT_BINARY_DIR}/1100_Final_Standings")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1327_Fuses "${CMAKE_CURRENT_BINARY_DIR}/1327_Fuses")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1893_A380 "${CMAKE_CURRENT_BINARY_DIR}/1893_A380")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1243_DivorceOfTheSevenDwarfs "${CMAKE_CURRENT_BINARY_DIR}/1243_DivorceOfTheSevenDwarfs")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1493_OneStepFromHappiness "${CMAKE_CURRENT_BINARY_DIR}/1493_OneStepFromHappiness")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1110_Power "${CMAKE_CURRENT_BINARY_DIR}/1110_Power")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1496_Spammer "${CMAKE_CURRENT_BINARY_DIR}/1496_Spammer")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1545_Hieroglyphs "${CMAKE_CURRENT_BINARY_DIR}/1545_Hieroglyphs")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1925_BritishScientistsSaveTheWorld "${CMAKE_CURRENT_BINARY_DIR}/1925_BritishScientistsSaveTheWorld")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1636_PenaltyTime "${CMAKE_CURRENT_BINARY_DIR}/1636_PenaltyTime")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1837_IsenbaevsNumber "${CMAKE_CURRENT_BINARY_DIR}/1837_IsenbaevsNumber")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1196_HistoryExam "${CMAKE_CURRENT_BINARY_DIR}/1196_HistoryExam")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1654_CipherMessage "${CMAKE_CURRENT_BINARY_DIR}/1654_CipherMessage")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/2002_TestTask "${CMAKE_CURRENT_BINARY_DIR}/2002_TestTask")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1563_Bayan "${CMAKE_CURRENT_BINARY_DIR}/1563_Bayan")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1617_FlatSpots "${CMAKE_CURRENT_BINARY_DIR}/1617_FlatSpots")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/2035_AnotherDressRehearsal "${CMAKE_CURRENT_BINARY_DIR}/2035_AnotherDressRehearsal")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1131_Copying "${CMAKE_CURRENT_BINARY_DIR}/1131_Copying")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1349_Farm "${CMAKE_CURRENT_BINARY_DIR}/1349_Farm")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1037_Memory_Management "${CMAKE_CURRENT_BINARY_DIR}/1037_Memory_Management")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1126_Magnetic_Storms "${CMAKE_CURRENT_BINARY_DIR}/1126_Magnetic_Storms")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1005_StonePile "${CMAKE_CURRENT_BINARY_DIR}/1005_StonePile")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1004_ProductOfDigits "${CMAKE_CURRENT_BINARY_DIR}/1004_ProductOfDigits")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1083_Factorials "${CMAKE_CURRENT_BINARY_DIR}/1083_Factorials")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1000_APlusB "${CMAKE_CURRENT_BINARY_DIR}/1000_APlusB")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1082_GabyIvanushka "${CMAKE_CURRENT_BINARY_DIR}/1082_GabyIvanushka")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1020_Rope "${CMAKE_CURRENT_BINARY_DIR}/1020_Rope")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1638_Bookworm "${CMAKE_CURRENT_BINARY_DIR}/1638_Bookworm")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/2056_Scholarship "${CMAKE_CURRENT_BINARY_DIR}/2056_Scholarship")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1044_LuckyTicketsEasy "${CMAKE_CURRENT_BINARY_DIR}/1044_LuckyTicketsEasy")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1924_FourImps "${CMAKE_CURRENT_BINARY_DIR}/1924_FourImps")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/2100_WeddingDinner "${CMAKE_CURRENT_BINARY_DIR}/2100_WeddingDinner")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1820_UralSteaks "${CMAKE_CURRENT_BINARY_DIR}/1820_UralSteaks")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1224_Spiral "${CMAKE_CURRENT_BINARY_DIR}/1224_Spiral")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1457_HeatingMain "${CMAKE_CURRENT_BINARY_DIR}/1457_HeatingMain")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1935_TearsOfDrowned "${CMAKE_CURRENT_BINARY_DIR}/1935_TearsOfDrowned")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/2005_TaxiForProgrammers "${CMAKE_CURRENT_BINARY_DIR}/2005_TaxiForProgrammers")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1306_SequenceMedian "${CMAKE_CURRENT_BINARY_DIR}/1306_SequenceMedian")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1712_CipherGrille "${CMAKE_CURRENT_BINARY_DIR}/1712_CipherGrille")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1194_Handshakes "${CMAKE_CURRENT_BINARY_DIR}/1194_Handshakes")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1351_GoodGnusmasDeadGnusmas "${CMAKE_CURRENT_BINARY_DIR}/1351_GoodGnusmasDeadGnusmas")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1671_AnansisCobweb "${CMAKE_CURRENT_BINARY_DIR}/1671_AnansisCobweb")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1613_ForFansOfStatistics "${CMAKE_CURRENT_BINARY_DIR}/1613_ForFansOfStatistics")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1987_NestedSegments "${CMAKE_CURRENT_BINARY_DIR}/1987_NestedSegments")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1494_Monobilliards "${CMAKE_CURRENT_BINARY_DIR}/1494_Monobilliards")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1471_DistanceInTheTree "${CMAKE_CURRENT_BINARY_DIR}/1471_DistanceInTheTree")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1048_SuperlongSums "${CMAKE_CURRENT_BINARY_DIR}/1048_SuperlongSums")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1002_PhoneNumbers "${CMAKE_CURRENT_BINARY_DIR}/1002_PhoneNumbers")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1297_Palindrome "${CMAKE_CURRENT_BINARY_DIR}/1297_Palindrome")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/1161_Stripies "${CMAKE_CURRENT_BINARY_DIR}/1161_Stripies")
