cmake_minimum_required(VERSION 2.8)

SET(PARENT_PROJECT acmp)
project (${PARENT_PROJECT})

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Task108 "${CMAKE_CURRENT_BINARY_DIR}/Task108")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Task1 "${CMAKE_CURRENT_BINARY_DIR}/Task1")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Task25 "${CMAKE_CURRENT_BINARY_DIR}/Task25")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Task195 "${CMAKE_CURRENT_BINARY_DIR}/Task195")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Task33 "${CMAKE_CURRENT_BINARY_DIR}/Task33")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Task21 "${CMAKE_CURRENT_BINARY_DIR}/Task21")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Task4 "${CMAKE_CURRENT_BINARY_DIR}/Task4")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Task8 "${CMAKE_CURRENT_BINARY_DIR}/Task8")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Task539 "${CMAKE_CURRENT_BINARY_DIR}/Task539")
