cmake_minimum_required(VERSION 2.8)

SET(PARENT_PROJECT codechef)
project (${PARENT_PROJECT})

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/HS08TEST "${CMAKE_CURRENT_BINARY_DIR}/HS08TEST")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/INTEST "${CMAKE_CURRENT_BINARY_DIR}/INTEST")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/FCTRL2 "${CMAKE_CURRENT_BINARY_DIR}/FCTRL2")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/JDELAY "${CMAKE_CURRENT_BINARY_DIR}/JDELAY")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/CHEFRES "${CMAKE_CURRENT_BINARY_DIR}/CHEFRES")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/TLG "${CMAKE_CURRENT_BINARY_DIR}/TLG")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ZCO14001 "${CMAKE_CURRENT_BINARY_DIR}/ZCO14001")
