cmake_minimum_required(VERSION 2.8)

SET(PARENT_PROJECT ej)
project (${PARENT_PROJECT})

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/it-e "${CMAKE_CURRENT_BINARY_DIR}/it-e")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/it-g "${CMAKE_CURRENT_BINARY_DIR}/it-g")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/it-i "${CMAKE_CURRENT_BINARY_DIR}/it-i")
