cmake_minimum_required(VERSION 2.8)

SET(PARENT_PROJECT geeksforgeeks)
project (${PARENT_PROJECT})
add_definitions(-DLOCAL_TESTS)

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/kadanes-algorithm "${CMAKE_CURRENT_BINARY_DIR}/kadanes-algorithm")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/is-sudoku-valid "${CMAKE_CURRENT_BINARY_DIR}/is-sudoku-valid")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/number-of-unique-paths "${CMAKE_CURRENT_BINARY_DIR}/number-of-unique-paths")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/sum-terms-nth-row "${CMAKE_CURRENT_BINARY_DIR}/sum-terms-nth-row")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/paths-to-reach-origin "${CMAKE_CURRENT_BINARY_DIR}/paths-to-reach-origin")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/find-duplicates-in-an-array "${CMAKE_CURRENT_BINARY_DIR}/find-duplicates-in-an-array")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/trapping-rain-water "${CMAKE_CURRENT_BINARY_DIR}/trapping-rain-water")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/rotate-array-by-n-elements "${CMAKE_CURRENT_BINARY_DIR}/rotate-array-by-n-elements")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/pair-with-given-sum-in-a-sorted-array "${CMAKE_CURRENT_BINARY_DIR}/pair-with-given-sum-in-a-sorted-array")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/spirally-traversing-a-matrix "${CMAKE_CURRENT_BINARY_DIR}/spirally-traversing-a-matrix")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/sorting-elements-of-an-array-by-frequency "${CMAKE_CURRENT_BINARY_DIR}/sorting-elements-of-an-array-by-frequency")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/sorted-subsequence-of-size-3 "${CMAKE_CURRENT_BINARY_DIR}/sorted-subsequence-of-size-3")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/lowest-common-ancestor-in-a-binary-tree "${CMAKE_CURRENT_BINARY_DIR}/lowest-common-ancestor-in-a-binary-tree")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/finding-middle-element-in-a-linked-list "${CMAKE_CURRENT_BINARY_DIR}/finding-middle-element-in-a-linked-list")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/find-missing-and-repeating "${CMAKE_CURRENT_BINARY_DIR}/find-missing-and-repeating")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/stock-buy-and-sell "${CMAKE_CURRENT_BINARY_DIR}/stock-buy-and-sell")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/detect-loop-in-linked-list "${CMAKE_CURRENT_BINARY_DIR}/detect-loop-in-linked-list")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/remove-loop-in-linked-list "${CMAKE_CURRENT_BINARY_DIR}/remove-loop-in-linked-list")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/sort-a-stack "${CMAKE_CURRENT_BINARY_DIR}/sort-a-stack")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/min-distance-between-two-given-nodes-of-a-binary-tree "${CMAKE_CURRENT_BINARY_DIR}/min-distance-between-two-given-nodes-of-a-binary-tree")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/longest-common-subsequence "${CMAKE_CURRENT_BINARY_DIR}/longest-common-subsequence")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/count-all-possible-paths-from-top-left-to-bottom-right "${CMAKE_CURRENT_BINARY_DIR}/count-all-possible-paths-from-top-left-to-bottom-right")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/sum-of-digit-is-pallindrome-or-not "${CMAKE_CURRENT_BINARY_DIR}/sum-of-digit-is-pallindrome-or-not")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/longest-common-subsequence "${CMAKE_CURRENT_BINARY_DIR}/longest-common-subsequence")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/reverse-digit "${CMAKE_CURRENT_BINARY_DIR}/reverse-digit")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/rotate-a-2d-array-without-using-extra-space "${CMAKE_CURRENT_BINARY_DIR}/rotate-a-2d-array-without-using-extra-space")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/remove-b-and-ac-from-a-given-string "${CMAKE_CURRENT_BINARY_DIR}/remove-b-and-ac-from-a-given-string")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/x-total-shapes "${CMAKE_CURRENT_BINARY_DIR}/x-total-shapes")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/pairs-with-difference-k "${CMAKE_CURRENT_BINARY_DIR}/pairs-with-difference-k")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/predecessor-and-successor "${CMAKE_CURRENT_BINARY_DIR}/predecessor-and-successor")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/count-bst-nodes-that-lie-in-a-given-range "${CMAKE_CURRENT_BINARY_DIR}/count-bst-nodes-that-lie-in-a-given-range")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/check-for-bst "${CMAKE_CURRENT_BINARY_DIR}/check-for-bst")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/root-to-leaf-paths-sum "${CMAKE_CURRENT_BINARY_DIR}/root-to-leaf-paths-sum")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/left-view-of-binary-tree "${CMAKE_CURRENT_BINARY_DIR}/left-view-of-binary-tree")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/level-order-traversal "${CMAKE_CURRENT_BINARY_DIR}/level-order-traversal")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/level-order-traversal-line-by-line "${CMAKE_CURRENT_BINARY_DIR}/level-order-traversal-line-by-line")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/reverse-level-order-traversal "${CMAKE_CURRENT_BINARY_DIR}/reverse-level-order-traversal")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/right-view-of-binary-tree "${CMAKE_CURRENT_BINARY_DIR}/right-view-of-binary-tree")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/loop-in-array "${CMAKE_CURRENT_BINARY_DIR}/loop-in-array")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/bottom-view-of-binary-tree "${CMAKE_CURRENT_BINARY_DIR}/bottom-view-of-binary-tree")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/top-view-of-binary-tree "${CMAKE_CURRENT_BINARY_DIR}/top-view-of-binary-tree")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/k-th-element-of-two-sorted-array "${CMAKE_CURRENT_BINARY_DIR}/k-th-element-of-two-sorted-array")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/triplet-sum-in-array "${CMAKE_CURRENT_BINARY_DIR}/triplet-sum-in-array")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/sum-tree "${CMAKE_CURRENT_BINARY_DIR}/sum-tree")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/maximum-sub-array "${CMAKE_CURRENT_BINARY_DIR}/maximum-sub-array")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/maximum-index "${CMAKE_CURRENT_BINARY_DIR}/maximum-index")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/minimum-distance-between-two-numbers "${CMAKE_CURRENT_BINARY_DIR}/minimum-distance-between-two-numbers")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/chocolate-distribution-problem "${CMAKE_CURRENT_BINARY_DIR}/chocolate-distribution-problem")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/count-smaller-elements "${CMAKE_CURRENT_BINARY_DIR}/count-smaller-elements")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/majority-element "${CMAKE_CURRENT_BINARY_DIR}/majority-element")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/first-repeating-element "${CMAKE_CURRENT_BINARY_DIR}/first-repeating-element")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/find-first-repeated-character "${CMAKE_CURRENT_BINARY_DIR}/find-first-repeated-character")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/non-repeating-character "${CMAKE_CURRENT_BINARY_DIR}/non-repeating-character")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/zero-sum-subarrays "${CMAKE_CURRENT_BINARY_DIR}/zero-sum-subarrays")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/subarray-with-0-sum "${CMAKE_CURRENT_BINARY_DIR}/subarray-with-0-sum")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/max-sum-subarray-of-size-k "${CMAKE_CURRENT_BINARY_DIR}/max-sum-subarray-of-size-k")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/largest-subarray-of-0s-and-1s "${CMAKE_CURRENT_BINARY_DIR}/largest-subarray-of-0s-and-1s")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/maximum-sum-of-subarray-less-than-or-equal-to-x "${CMAKE_CURRENT_BINARY_DIR}/maximum-sum-of-subarray-less-than-or-equal-to-x")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/sort-first-half-in-ascending-and-second-half-in-descending "${CMAKE_CURRENT_BINARY_DIR}/sort-first-half-in-ascending-and-second-half-in-descending")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/maximum-product-subarray "${CMAKE_CURRENT_BINARY_DIR}/maximum-product-subarray")
